# ChimpanC

./: .clangd  .gitignore  ;  ;'  CMakeLists.txt  Makefile  README.md  ast.h  chimp  gdb.txt  main.c  memory.c  memory.h  test_lexer  test_parser  test_string  test_value  value.c  value.h
.cache/clangd/index/: ast.c.4A5D2BE888CFA57D.idx  ast.h.C1F001566F823334.idx  lexer.c.3682B3C7F119985E.idx  lexer.h.A4CB3713821B052C.idx  main.c.BAA26BFA1CFCFDEA.idx  parser.c.A7A977A95A50363A.idx  parser.h.8DE466D7D080D2BD.idx  printer.c.96B8735083DD055E.idx  printer.h.36F3343DF7DBD5BE.idx  test_helper_functions.c.3992EF620DE59827.idx  test_helper_functions.h.A0A969DD610C9EE0.idx  test_lexer.c.66921C2BB107D9C9.idx  test_parser.c.176A428B1D6F4BF5.idx  test_value.c.1A717903D899E644.idx  utilities.h.D2E204E63B3D793C.idx  value.c.7CB229C55F3C174D.idx  value.h.129CF2AC9C1095E0.idx  write_output_to_buffer.c.BDD7F14E72C7F057.idx  write_output_to_buffer.h.8D36E2B19633FF33.idx
src/: ast.c  ast.h  debugger.c  debugger.h  dynstring.c  dynstring.h  lexer.c  lexer.h  main.c  parser.c  parser.h  printer.c  printer.h  utilities.h  value.c  value.h
tests/: helper_buffer.c  helper_buffer.h  lexer_test.c  test_helper_functions.c  test_helper_functions.h  test_lexer.c  test_parser.c  test_string.c  test_value.c  write_output_to_buffer.c  write_output_to_buffer.h
